<resources>
    <string name="app_name">WGU Term Tracker</string>
    <string name="action_add_sample_data">Add sample data</string>
    <string name="title_activity_term_detail">TermDetailActivity</string>
    <string name="title_activity_term_editor">TermEditorActivity</string>
    <string name="delete_all_terms">Delete all terms</string>
    <string name="term_name">Term Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="term_start_date">Start Date</string>
    <string name="term_end_date">End Date</string>
    <string name="courses">Courses</string>
    <string name="action_add_sample_terms">Add sample terms</string>
    <string name="delete">Delete</string>
    <item name="term_name" type="id" />
    <string name="title_activity_course">CourseActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="course_name">Course Name</string>
    <string name="course_start_date">Start Date</string>
    <string name="course_end_date">End Date</string>
    <string name="course_status">Course Status</string>
    <string name="course_note_label">Note</string>
    <string name="course_note">Course Note</string>
    <string name="title_activity_course_editor">CourseEditorActivity</string>
    <string name="edit">Edit</string>
    <string name="assessments">Assessments</string>
    <string name="mentors">Mentors</string>
    <string name="title_activity_mentor_editor">MentorEditorActivity</string>
    <string name="title_activity_assessment_editor">AssessmentEditorActivity</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="mentor_phone">Mentor Phone</string>
    <string name="mentor_email">Mentor Email</string>
    <string name="title_activity_mentor_detail">MentorActivity</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="enter_note">Enter note</string>
    <string name="add_mentor">Add mentor</string>
    <string name="add_assessment">Add assessment</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="assessment_date">Assessment Date</string>
    <string name="objective">Objective</string>
    <string name="performance">Performance</string>
    <string name="date">Date</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_content">Notification Content</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
</resources>
