<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/course_start_date"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="120dp"
        android:autofillHints="@string/start_date"
        android:gravity="end"
        android:text="@string/start_date"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_start_date_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="end"
        android:labelFor="@id/course_start_date"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:text="@string/course_start_date"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toStartOf="@+id/course_start_date"
        app:layout_constraintTop_toTopOf="@+id/course_start_date" />

    <TextView
        android:id="@+id/course_end_date"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginEnd="120dp"
        android:autofillHints="@string/start_date"
        android:gravity="end"
        android:text="@string/end_date"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_start_date" />

    <TextView
        android:id="@+id/course_end_date_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="end"
        android:labelFor="@id/course_end_date"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:text="@string/course_end_date"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toStartOf="@+id/course_end_date"
        app:layout_constraintTop_toBottomOf="@id/course_start_date_label" />

    <TextView
        android:id="@+id/course_status"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginEnd="120dp"
        android:autofillHints="@string/course_status"
        android:gravity="end"
        android:text="@string/course_status"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_end_date" />

    <TextView
        android:id="@+id/course_status_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="end"
        android:labelFor="@id/course_status"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:text="@string/course_status"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toStartOf="@+id/course_status"
        app:layout_constraintTop_toBottomOf="@id/course_end_date_label" />

    <TextView
        android:id="@+id/course_note_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="end"
        android:labelFor="@id/course_note"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:text="@string/course_note_label"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toEndOf="@id/course_status_label"
        app:layout_constraintTop_toBottomOf="@id/course_status_label" />

    <TextView
        android:id="@+id/course_note"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:autofillHints="@string/course_note"
        android:gravity="end"
        android:text="@string/course_note"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_status" />


</androidx.constraintlayout.widget.ConstraintLayout>
