<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/mentor_name_edit"
        android:inputType="textCapWords"
        android:layout_width="170dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="@string/mentor_name"
        android:hint="@string/mentor_name" />

    <EditText
        android:id="@+id/mentor_phone_edit"
        android:inputType="phone"
        android:layout_width="170dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/mentor_name_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="@string/mentor_phone"
        android:hint="@string/mentor_phone" />

    <EditText
        android:id="@+id/mentor_email_edit"
        android:inputType="textEmailAddress"
        android:layout_width="170dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/mentor_phone_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="@string/mentor_email"
        android:hint="@string/mentor_email" />

</androidx.constraintlayout.widget.ConstraintLayout>
