<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/assessment_name_edit"
        android:inputType="textCapWords"
        android:layout_width="170dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="@string/assessment_name"
        android:hint="@string/assessment_name" />

    <EditText
        android:id="@+id/assessment_date_edit"
        android:inputType="date"
        android:layout_width="170dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@id/assessment_name_edit"
        app:layout_constraintTop_toBottomOf="@id/assessment_name_edit"
        android:autofillHints="@string/date"
        android:hint="@string/date" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/assessment_edit_date_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="mini"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="@id/assessment_date_edit"
        app:layout_constraintStart_toEndOf="@id/assessment_date_edit"
        android:clickable="true"
        app:srcCompat="@drawable/ic_calendar" />

    <Spinner
        android:id="@+id/assessment_type_spinner"
        android:layout_width="170dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/assessment_date_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:spinnerMode="dropdown"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/assessment_type" />

</androidx.constraintlayout.widget.ConstraintLayout>
