<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/mentor_name"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="120dp"
        android:autofillHints="@string/mentor_name"
        android:gravity="end"
        android:text="@string/mentor_name"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mentor_name_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="end"
        android:labelFor="@id/mentor_name"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:text="@string/mentor_name"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toStartOf="@+id/mentor_name"
        app:layout_constraintTop_toTopOf="@+id/mentor_name" />

    <TextView
        android:id="@+id/mentor_phone"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginEnd="120dp"
        android:autofillHints="@string/mentor_phone"
        android:gravity="end"
        android:text="@string/mentor_phone"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentor_name" />

    <TextView
        android:id="@+id/mentor_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="end"
        android:labelFor="@id/mentor_phone"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:text="@string/mentor_phone"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toStartOf="@+id/mentor_phone"
        app:layout_constraintTop_toBottomOf="@id/mentor_name_label" />

    <TextView
        android:id="@+id/mentor_email"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginEnd="120dp"
        android:autofillHints="@string/mentor_email"
        android:gravity="end"
        android:text="@string/mentor_email"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentor_phone" />

    <TextView
        android:id="@+id/mentor_email_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="end"
        android:labelFor="@id/mentor_email"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:text="@string/mentor_email"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/list_text_color"
        app:layout_constraintEnd_toStartOf="@+id/mentor_email"
        app:layout_constraintTop_toBottomOf="@id/mentor_phone_label" />

</androidx.constraintlayout.widget.ConstraintLayout>
